--- a/task/MRG/seq2seq/requirements.txt
+++ b/task/MRG/seq2seq/requirements.txt
@@ -47,11 +47,11 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 mistune==0.8.4
 mkl-fft==1.0.14
-mkl-random==1.0.2
+# mkl-random==1.0.2
 mkl-service==2.3.0
 mock==3.0.5
-nb-conda==2.2.1
-nb-conda-kernels==2.2.2
+# nb-conda==2.2.1
+# nb-conda-kernels==2.2.2
 nbconvert==5.5.0
 nbformat==4.4.0
 networkx==2.3
@@ -73,7 +73,7 @@ ptyprocess==0.6.0
 pycparser==2.19
 pydot==1.4.1
 Pygments==2.4.2
-pygpu==0.7.6
+# pygpu==0.7.6
 pyparsing==2.4.2
 pyrouge==0.1.3
 pyrsistent==0.14.11
